syntax = "proto3";
option java_package = "orbit.shared.proto";

import "google/protobuf/timestamp.proto";

package orbit.shared;

message AddressableReferenceProto {
    string type = 1;
    string id = 2;
}